--- a/ffgo/Makefile
+++ b/ffgo/Makefile
@@ -3,5 +3,7 @@ all:
 	ar rvs ./ffgo.a ./ffgocodec.o
 #    export GO111MODULE=off
 	 go build libff.go
+build_ffmpeg:
+	sh build_ff.sh
 clean:
 	rm -fr ./ffgocodec.o ./ffgo.a
